Update licensing to Apache 2.0 and enhance shadow opacity handling
- Updated licensing across the project from CC0 to Apache License 2.0.
- Introduced thread-safe handling of shadow opacity using `AtomicInteger` in `SystemProperties`.
- Refactored `getShadowOpacity` and `setShadowOpacity` methods for improved clarity and safety.
- Optimized shadow opacity clamping logic using `Math.clamp`.
- Added comprehensive unit tests for `SystemProperties` to validate shadow opacity behavior.
- Simplified button creation in `TWidget` to support lambda expressions.
- Replaced imports in `LogicalScreen` with explicit declarations for clarity.