@@ -15,6 +15,8 @@
  */
 package casciian.backend;
 
+import java.util.concurrent.atomic.AtomicInteger;
+
 /**
  * System properties used by Casciian.
  */
@@ -27,6 +29,19 @@ public class SystemProperties {
      */
     public static final String CASCIIAN_SHADOW_OPACITY = "casciian.shadowOpacity";
 
+    /**
+     * The default value for a property to signal was not set.
+     */
+    public static final int UNSET_PROPERTY = -1;
+
+    /**
+     * Atomic integer representing the shadow opacity setting.
+     * This value is expected to be a percentage ranging from 0 to 100, which determines
+     * the opacity level of a shadow effect. The default value is 60 if not explicitly set.
+     * Internal updates to this variable should ensure it stays within the valid range.
+     */
+    private static final AtomicInteger shadowOpacity = new AtomicInteger(UNSET_PROPERTY);
+
     private SystemProperties() {
     }
 
@@ -36,10 +51,15 @@ public class SystemProperties {
      * @return shadow opacity value between 0 and 100, or default value of 60
      */
     public static int getShadowOpacity() {
-        final int defaultShadowOpacity = 60;
-        final int shadowOpacityValue = Integer.getInteger(CASCIIAN_SHADOW_OPACITY, defaultShadowOpacity);
+        if (shadowOpacity.get() == UNSET_PROPERTY) {
+            final int defaultShadowOpacity = 60;
+            final int shadowOpacityValue = Integer.getInteger(CASCIIAN_SHADOW_OPACITY, defaultShadowOpacity);
 
-        return shadowOpacityValue >= 0 && shadowOpacityValue <= 100 ? shadowOpacityValue : defaultShadowOpacity;
+            shadowOpacity.set(
+                shadowOpacityValue >= 0 && shadowOpacityValue <= 100 ? shadowOpacityValue : defaultShadowOpacity);
+        }
+
+        return shadowOpacity.get();
     }
 
     /**
@@ -49,7 +69,8 @@ public class SystemProperties {
      * @param value shadow opacity value (will be clamped to 0-100)
      */
     public static void setShadowOpacity(int value) {
-        int clampedValue = Math.max(0, Math.min(100, value));
+        int clampedValue = Math.clamp(value, 0, 100);
         System.setProperty(CASCIIAN_SHADOW_OPACITY, String.valueOf(clampedValue));
+        shadowOpacity.set(clampedValue);
     }
 }
